--- a/CW ADP/.classpath
+++ b/CW ADP/.classpath
@@ -11,6 +11,16 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/xthas/Downloads/taglibs1.2.5_76f19f4d-f6b0-439b-9686-8d63ecdb31e4_93445_/taglibs-standard-spec-1.2.5.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/xthas/Downloads/taglibs1.2.5_76f19f4d-f6b0-439b-9686-8d63ecdb31e4_93445_/taglibs-standard-impl-1.2.5.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/apache-tomcat-8.5.73">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
